--- a/think/index.html
+++ b/think/index.html
@@ -757,6 +757,7 @@ p { margin-bottom: 1.25rem; }
 <div id="toctitle">目录</div>
 <ul class="sectlevel1">
 <li><a href="#_前言">前言</a></li>
+<li><a href="#_PHP_chapter">1. PHP</a></li>
 </ul>
 </div>
 </div>
@@ -770,10 +771,71 @@ p { margin-bottom: 1.25rem; }
 <div style="page-break-after: always;"></div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_PHP_chapter">1. PHP</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p><strong>基于 CentOS 7</strong></p>
+</div>
+<div class="paragraph">
+<p>sudo pacman -S nginx php php-fpm</p>
+</div>
+<div class="paragraph">
+<p>systemctl start nginx;
+systemctl start php-fpm;</p>
+</div>
+<div class="paragraph">
+<p>root	/usr/share/nginx/html;
+        location / {
+            index index.php index.html index.htm;
+        }</p>
+</div>
+<div class="literalblock">
+<div class="content">
+<pre>#error_page  404              /404.html;</pre>
+</div>
+</div>
+<div class="literalblock">
+<div class="content">
+<pre># redirect server error pages to the static page /50x.html
+#
+error_page   500 502 503 504  /50x.html;
+location = /50x.html {
+    root   /usr/share/nginx/html;
+}</pre>
+</div>
+</div>
+<div class="literalblock">
+<div class="content">
+<pre># proxy the PHP scripts to Apache listening on 127.0.0.1:80
+#
+#location ~ \.php$ {
+#    proxy_pass   http://127.0.0.1;
+#}</pre>
+</div>
+</div>
+<div class="literalblock">
+<div class="content">
+<pre>   # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
+   #
+   location ~ \.php$ {
+       fastcgi_pass   127.0.0.1:9000;
+       fastcgi_index  index.php;
+fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
+include        fastcgi_params;
+   }</pre>
+</div>
+</div>
+<div class="paragraph">
+<p>listen = 127.0.0.1:9000</p>
+</div>
+<div style="page-break-after: always;"></div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-21 16:08:59 +0800
+Last updated 2022-04-28 13:54:09 +0800
 </div>
 </div>
 <script src="js/highlight.min.js"></script>
