--- a/think/index.html
+++ b/think/index.html
@@ -757,7 +757,26 @@ p { margin-bottom: 1.25rem; }
 <div id="toctitle">目录</div>
 <ul class="sectlevel1">
 <li><a href="#_前言">前言</a></li>
-<li><a href="#_PHP_chapter">1. PHP</a></li>
+<li><a href="#_Ruby_chapter">1. Ruby</a>
+<ul class="sectlevel2">
+<li><a href="#_asdf安装">1.1. asdf安装</a>
+<ul class="sectlevel3">
+<li><a href="#_下载">1.1.1. 下载</a></li>
+<li><a href="#_安装">1.1.2. 安装</a></li>
+<li><a href="#_安装插件">1.1.3. 安装插件</a></li>
+<li><a href="#_安装指定版本">1.1.4. 安装指定版本</a></li>
+<li><a href="#_设置默认版本">1.1.5. 设置默认版本</a>
+<ul class="sectlevel4">
+<li><a href="#_全局">全局</a></li>
+<li><a href="#_本地">本地</a></li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+<li><a href="#_Asc_chapter">2. Asciidoctor</a></li>
+<li><a href="#_PHP_chapter">3. PHP</a></li>
 </ul>
 </div>
 </div>
@@ -772,7 +791,172 @@ p { margin-bottom: 1.25rem; }
 </div>
 </div>
 <div class="sect1">
-<h2 id="_PHP_chapter">1. PHP</h2>
+<h2 id="_Ruby_chapter">1. Ruby</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p><strong>基于 archlinux</strong></p>
+</div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+推荐使用asdf安装
+</td>
+</tr>
+</table>
+</div>
+<div class="sect2">
+<h3 id="_asdf安装">1.1. asdf安装</h3>
+<div class="sect3">
+<h4 id="_下载">1.1.1. 下载</h4>
+<div class="paragraph">
+<p>Yaourt:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre>yaourt -S asdf-vm</pre>
+</div>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_安装">1.1.2. 安装</h4>
+<div class="paragraph">
+<p>添加以下代码到 ~/.bashrc :</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre>. /opt/asdf-vm/asdf.sh</pre>
+</div>
+</div>
+<div class="paragraph">
+<p>然后执行source ~/.bashrc</p>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_安装插件">1.1.3. 安装插件</h4>
+<div class="paragraph">
+<p>Ruby插件地址：https://github.com/asdf-vm/asdf-ruby</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre>asdf plugin add ruby https://github.com/asdf-vm/asdf-ruby.git</pre>
+</div>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_安装指定版本">1.1.4. 安装指定版本</h4>
+<div class="paragraph">
+<p>我们通过 asdf list all ruby 可以看到所有可用的版本</p>
+</div>
+<div class="paragraph">
+<p>安装最新版本：</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre>asdf install ruby latest</pre>
+</div>
+</div>
+<div class="paragraph">
+<p>安装指定版本：</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre>asdf install ruby 2.4.1</pre>
+</div>
+</div>
+<div class="admonitionblock warning">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-warning" title="Warning"></i>
+</td>
+<td class="content">
+asdf 强制使用准确的版本。latest 是一个通过 asdf 来解析到执行时刻的实际版本号的辅助工具。
+</td>
+</tr>
+</table>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_设置默认版本">1.1.5. 设置默认版本</h4>
+<div class="paragraph">
+<p>asdf 在从当前工作目录一直到 $HOME 目录的所有 .tool-versions 文件中进行工具的版本查找。查找在执行 asdf 管理的工具时实时发生</p>
+</div>
+<div class="admonitionblock important">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-important" title="Important"></i>
+</td>
+<td class="content">
+如果没有为工具找到指定的版本，则会出现错误。asdf current 将显示当前目录中的工具和版本解析结果，或者不存在，以便你可以观察哪些工具将无法执行。
+</td>
+</tr>
+</table>
+</div>
+<div class="sect4">
+<h5 id="_全局">全局</h5>
+<div class="paragraph">
+<p>全局默认配置在 $HOME/.tool-versions 文件中进行管理。使用以下命令可以设置一个全局版本：</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre>asdf global ruby 2.4.1</pre>
+</div>
+</div>
+<div class="paragraph">
+<p>$HOME/.tool-versions 文件内容将会如下所示：</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre>ruby 2.4.1</pre>
+</div>
+</div>
+<div class="paragraph">
+<p>某些操作系统已经有一些由系统而非 asdf 安装和管理的工具了，python 就是一个常见的例子。你需要告诉 asdf 将管理权还给系统。版本参考部分 将会引导你。</p>
+</div>
+</div>
+<div class="sect4">
+<h5 id="_本地">本地</h5>
+<div class="paragraph">
+<p>本地版本被定义在 $PWD/.tool-versions 文件中（当前工作目录）。通常，这将会是一个项目的 Git 存储库。当在你想要的目录执行：</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre>asdf local ruby 2.4.1</pre>
+</div>
+</div>
+<div class="paragraph">
+<p>$PWD/.tool-versions 文件内容将会如下所示：</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre>ruby 2.4.1</pre>
+</div>
+</div>
+<div style="page-break-after: always;"></div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_Asc_chapter">2. Asciidoctor</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p><strong>基于 archlinux</strong></p>
+</div>
+<div class="paragraph">
+<p>推荐使用Ruby 2.4.1版本</p>
+</div>
+<div style="page-break-after: always;"></div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_PHP_chapter">3. PHP</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p><strong>基于 CentOS 7</strong></p>
@@ -835,7 +1019,7 @@ include        fastcgi_params;
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-04-28 13:54:09 +0800
+Last updated 2022-04-28 14:31:28 +0800
 </div>
 </div>
 <script src="js/highlight.min.js"></script>
